--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -59,7 +59,7 @@ jobs:
         name: release
         path: ./release.zip
 
-#    - uses: 8398a7/action-slack@v3
+##    - uses: 8398a7/action-slack@v3
 #      with:
 #        status: ${{ job.status }}
 #        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
